MAIN PAGE - added title attribute to movie's title Started TED block

--- a/app/index.html
+++ b/app/index.html
@@ -91,9 +91,10 @@
                                 <img src="img/1.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">Game Of Thrones blad na</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target"
+                                      title="Обитель зла 6: Последняя глава (2017)">Обитель зла 6: Последняя глава (2017)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Ужасы,
+                                    Фантастика, Боевик</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -105,9 +106,9 @@
                                 <img src="img/2.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">Ice Age</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target"
+                                      title="Крест. Часть вторая: Двойной обман (2017)">Крест. Часть вторая: Двойной обман (2017)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Боевик</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -119,9 +120,9 @@
                                 <img src="img/3.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">1+1</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target"
+                                      title="На пятьдесят оттенков темнее (2017)">На пятьдесят оттенков темнее (2017)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Мелодрама</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -133,9 +134,8 @@
                                 <img src="img/4.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">Breaking Bad</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target" title="Команда мечты (2016)">Команда мечты (2016)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Комедия</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -144,12 +144,12 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="img/1.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="img/5.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">Alf</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target" title="Доктор Стрэндж (2016)">Доктор Стрэндж (2016)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Фэнтези,
+                                    Боевик, Приключения</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -197,12 +197,12 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="img/1.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="img/6.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">Game Of Thrones blad na</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target" title="Моана (2016)">Моана (2016)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Мультфильм,
+                                    Детский, Семейный</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -211,12 +211,12 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="img/2.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="img/11.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">Ice Age</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target" title="В поисках Дори (2016)">В поисках Дори (2016)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Мультфильм,
+                                    Детский, Семейный</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -225,12 +225,13 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="img/3.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="img/9.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">1+1</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target"
+                                      title="Кубо. Легенда о самурае (2016)">Кубо. Легенда о самурае (2016)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Мультфильм,
+                                    Детский, Семейный</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -239,12 +240,13 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="img/4.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="img/10.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">Breaking Bad</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target"
+                                      title="Тайная жизнь домашних животных (2016)">Тайная жизнь домашних животных (2016)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Мультфильм,
+                                    Детский</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -253,12 +255,12 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="img/1.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="img/8.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
-                                <span class="branch-ref css-truncate css-truncate-target">Alf</span>
-                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Fiction,
-                                    Action, Fantasy, Shimpanze</i>
+                                <span class="branch-ref css-truncate css-truncate-target" title="Тролли (2016)">Тролли (2016)</span>
+                                <i class="branch-ref css-truncate css-truncate-target text-gray text-small">Мультфильм,
+                                    Семейный</i>
                             </div>
                         </div>
                         <!--movie-list__item   end-->
@@ -305,9 +307,9 @@
                     <div class="one-third column">
                         <!--series-list__item start-->
                         <div class="series-list__item js-series-item"
-                             style="background: linear-gradient(to bottom, #0F1010, #6F7373);">
+                             style="background: linear-gradient(to bottom, #4F5B67, #A0A9B0);">
                             <a href="#">
-                                <span class="series-list__item-title">Game Of Thrones</span>
+                                <span class="series-list__item-title">MR. Robot</span>
                                 <span class="series-list__item-genres">Action, History, Fantasy</span>
 
                                 <img class="series-list__item-poster-left" src="img/1-left.jpg" alt="">
@@ -325,9 +327,9 @@
                                 <span class="series-list__item-title">Game Of Thrones</span>
                                 <span class="series-list__item-genres">Action, History, Fantasy</span>
 
-                                <img class="series-list__item-poster-left" src="img/1-left.jpg" alt="">
-                                <img class="series-list__item-poster-middle" src="img/1-middle.jpg" alt="">
-                                <img class="series-list__item-poster-right" src="img/1-right.jpg" alt="">
+                                <img class="series-list__item-poster-left" src="img/2-left.jpg" alt="">
+                                <img class="series-list__item-poster-middle" src="img/2-middle.jpg" alt="">
+                                <img class="series-list__item-poster-right" src="img/2-right.jpg" alt="">
                             </a>
                         </div>
                         <!--series-list__item   end-->
@@ -335,14 +337,14 @@
                     <div class="one-third column">
                         <!--series-list__item start-->
                         <div class="series-list__item js-series-item"
-                             style="background: linear-gradient(to bottom, #0F1010, #6F7373);">
+                             style="background: linear-gradient(to bottom, #938D6D, #E4DCD2);">
                             <a href="#">
-                                <span class="series-list__item-title">Game Of Thrones</span>
+                                <span class="series-list__item-title">Walking Dead</span>
                                 <span class="series-list__item-genres">Action, History, Fantasy</span>
 
-                                <img class="series-list__item-poster-left" src="img/1-left.jpg" alt="">
-                                <img class="series-list__item-poster-middle" src="img/1-middle.jpg" alt="">
-                                <img class="series-list__item-poster-right" src="img/1-right.jpg" alt="">
+                                <img class="series-list__item-poster-left" src="img/3-left.jpg" alt="">
+                                <img class="series-list__item-poster-middle" src="img/3-middle.jpg" alt="">
+                                <img class="series-list__item-poster-right" src="img/3-right.jpg" alt="">
                             </a>
                         </div>
                         <!--series-list__item   end-->
@@ -357,42 +359,79 @@
     <br>
 
     <!--ted-list start-->
-    <section class="ted-list outlined">
-        <div class="container outlined">
-            <div class="columns outlined">
-                <div class="single-column">
-                    <!--movie-list-header start-->
-                    <header class="movie-list-header">
-                        Movie list header
-                    </header>
-                    <!--movie-list-header   end-->
+    <section class="ted-list">
+        <!--movie-list-header start-->
+        <div class="movie-list-header">
+            <div class="container">
+                <div class="columns py-3">
+                    <div class="single-column">
+                        <header class="clearfix">
+                            <div class="left">
+                                <h3 class="text-gray-dark">TED</h3>
+                                <span class="text-gray">Ideas worth spreading</span>
+                            </div>
+                            <div class="right">
+                                <a href="#" class="btn btn-outline">All</a>
+                                <div class="btn-group">
+                                    <button class="btn" type="button">&larr;</button>
+                                    <button class="btn" type="button">&rarr;</button>
+                                </div>
+                            </div>
+                        </header>
+                    </div>
                 </div>
             </div>
         </div>
+        <!--movie-list-header   end-->
 
         <!--ted-list__items start-->
-        <div class="ted-list__items outlined">
-            <div class="container outlined">
+        <div class="ted-list__items">
+            <div class="container">
                 <div class="columns">
-                    <div class="one-fourth column outlined">
+                    <div class="one-fourth column">
                         <!--ted-list__item start-->
-                        <div class="ted-list__item">TED</div>
+                        <div class="ted-list__ted-description">
+                            <div class="blankslate blankslate-capped">
+                                <h3>This is a blank slate</h3>
+                                <p>Use it to provide information when no dynamic content exists.</p>
+                            </div>
+                        </div>
                         <!--ted-list__item   end-->
                     </div>
-                    <div class="one-fourth column outlined">
-                        <!--ted-list__item start-->
-                        <div class="ted-list__item">TED</div>
-                        <!--ted-list__item   end-->
-                    </div>
-                    <div class="one-fourth column outlined">
-                        <!--ted-list__item start-->
-                        <div class="ted-list__item">TED</div>
-                        <!--ted-list__item   end-->
-                    </div>
-                    <div class="one-fourth column outlined">
-                        <!--ted-list__item start-->
-                        <div class="ted-list__item">TED</div>
-                        <!--ted-list__item   end-->
+
+                    <div class="three-fourths column">
+                        <div class="columns">
+                            <div class="one-third column">
+                                <!--ted-list__item start-->
+                                <div class="ted-list__item">
+                                    <a href="#">
+                                        <img src="img/ted-1.jpg" class="img-responsive" alt="">
+                                    </a>
+                                    <span>What time is it on Mars?</span>
+                                </div>
+                                <!--ted-list__item   end-->
+                            </div>
+                            <div class="one-third column">
+                                <!--ted-list__item start-->
+                                <div class="ted-list__item">
+                                    <a href="#">
+                                        <img src="img/ted-2.jpg" class="img-responsive" alt="">
+                                    </a>
+                                    <span>New nanotech to detect cancer early</span>
+                                </div>
+                                <!--ted-list__item   end-->
+                            </div>
+                            <div class="one-third column">
+                                <!--ted-list__item start-->
+                                <div class="ted-list__item">
+                                    <a href="#">
+                                        <img src="img/ted-3.jpg" class="img-responsive" alt="">
+                                    </a>
+                                    <span>How I defend the rule of law</span>
+                                </div>
+                                <!--ted-list__item   end-->
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -401,6 +440,19 @@
     </section>
     <!--ted-list   end-->
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
 
     <!--footer start-->
