MAIN PAGE - TED block finished

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,6 @@
     <title>Bumbu.tv - main page</title>
     <link rel="stylesheet" href="css/primer.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/main-page.css">
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/tilt.jquery.min.js"></script>
@@ -368,7 +367,7 @@
                         <header class="clearfix">
                             <div class="left">
                                 <h3 class="text-gray-dark">TED</h3>
-                                <span class="text-gray">Ideas worth spreading</span>
+                                <span class="text-gray">Covers academic topics</span>
                             </div>
                             <div class="right">
                                 <a href="#" class="btn btn-outline">All</a>
@@ -392,8 +391,11 @@
                         <!--ted-list__item start-->
                         <div class="ted-list__ted-description">
                             <div class="blankslate blankslate-capped">
-                                <h3>This is a blank slate</h3>
-                                <p>Use it to provide information when no dynamic content exists.</p>
+                                <img src="img/TEDlogo.jpg" alt="">
+                                <span class="d-block">Ideas worth spreading</span>
+                                <span class="d-block mt-3">
+                                    <a href="http://www.ted.com/" target="_blank" class="btn btn-sm btn-outline">Learn more about TED</a>
+                                </span>
                             </div>
                         </div>
                         <!--ted-list__item   end-->
@@ -406,8 +408,11 @@
                                 <div class="ted-list__item">
                                     <a href="#">
                                         <img src="img/ted-1.jpg" class="img-responsive" alt="">
+                                        <div class="ted-list__item-desc">
+                                            <span>What time is it on Mars?</span>
+                                        </div>
+                                        <i>9:15</i>
                                     </a>
-                                    <span>What time is it on Mars?</span>
                                 </div>
                                 <!--ted-list__item   end-->
                             </div>
@@ -416,18 +421,24 @@
                                 <div class="ted-list__item">
                                     <a href="#">
                                         <img src="img/ted-2.jpg" class="img-responsive" alt="">
+                                        <div class="ted-list__item-desc">
+                                            <span>The good news of the decade? We're winning the war against child mortality</span>
+                                        </div>
+                                        <i>14:05</i>
                                     </a>
-                                    <span>New nanotech to detect cancer early</span>
                                 </div>
-                                <!--ted-list__item   end-->
+                                <!--ted-list__item end-->
                             </div>
                             <div class="one-third column">
                                 <!--ted-list__item start-->
                                 <div class="ted-list__item">
                                     <a href="#">
                                         <img src="img/ted-3.jpg" class="img-responsive" alt="">
+                                        <div class="ted-list__item-desc">
+                                            <span>Playlist: Statistically speaking ... a man who loved the world</span>
+                                        </div>
+                                        <i>8:50</i>
                                     </a>
-                                    <span>How I defend the rule of law</span>
                                 </div>
                                 <!--ted-list__item   end-->
                             </div>
@@ -441,26 +452,13 @@
     <!--ted-list   end-->
 
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
     <!--footer start-->
-    <footer class="outlined">
-        <div class="container outlined">
-            <div class="columns outlined">
+    <footer class="footer">
+        <div class="container">
+            <div class="columns">
                 <div class="single-column">
-                    footer
+
                 </div>
             </div>
         </div>
