MAIN PAGE - added footer block

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
                 <!--header__logo start-->
                 <div class="one-fifth column">
                     <div class="header__logo pt-2">
-                        <a href="#"><b>BUMBU.TV</b></a>
+                        <a href="#"><b>BUMBU.TV</b> <sup>&beta;</sup></a>
                     </div>
                 </div>
                 <!--header__logo   end-->
@@ -51,8 +51,6 @@
     </header>
     <!--header   end-->
 
-    <br>
-
     <!--moovie-list start-->
     <section class="movie-list">
         <!--movie-list-header start-->
@@ -62,7 +60,7 @@
                     <div class="single-column">
                         <header class="clearfix">
                             <div class="left">
-                                <h3 class="text-gray-dark">Latest movies</h3>
+                                <h3 class="text-gray-dark">Movies</h3>
                                 <span class="text-gray">Lorem ipsum dolor sit amet</span>
                             </div>
                             <div class="right">
@@ -160,8 +158,6 @@
     </section>
     <!--moovie-list   end-->
 
-    <br>
-
     <!--moovie-list start-->
     <section class="movie-list">
         <!--movie-list-header start-->
@@ -171,7 +167,7 @@
                     <div class="single-column">
                         <header class="clearfix">
                             <div class="left">
-                                <h3 class="text-gray-dark">Latest cartoons</h3>
+                                <h3 class="text-gray-dark">Cartoons</h3>
                                 <span class="text-gray">Lorem ipsum dolor sit amet</span>
                             </div>
                             <div class="right">
@@ -271,8 +267,6 @@
     </section>
     <!--moovie-list   end-->
 
-    <br>
-
     <!--series-list start-->
     <section class="series-list">
         <!--movie-list-header start-->
@@ -282,7 +276,7 @@
                     <div class="single-column">
                         <header class="clearfix">
                             <div class="left">
-                                <h3 class="text-gray-dark">Latest series</h3>
+                                <h3 class="text-gray-dark">Series</h3>
                                 <span class="text-gray">Lorem ipsum dolor sit amet</span>
                             </div>
                             <div class="right">
@@ -354,8 +348,6 @@
         <!--series-list__items   end-->
     </section>
     <!--series-list   end-->
-
-    <br>
 
     <!--ted-list start-->
     <section class="ted-list">
@@ -451,14 +443,20 @@
     </section>
     <!--ted-list   end-->
 
-    <br>
-
     <!--footer start-->
     <footer class="footer">
         <div class="container">
             <div class="columns">
                 <div class="single-column">
-
+                    <ul class="footer__items">
+                        <li>&copy; 2017 BumbuTV</li>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Security</a></li>
+                        <li><a href="#">Help</a></li>
+                        <li><a href="#">About project</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
