GULP - task chain added

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Bumbu.tv - main page</title>
-    <link rel="stylesheet" href="src/css/primer.css">
-    <link rel="stylesheet" href="src/css/common.css">
+    <link rel="stylesheet" href="dist/css/primer.css">
+    <link rel="stylesheet" href="dist/css/common.css">
 
     <script src="src/js/jquery-3.1.1.min.js"></script>
     <script src="src/js/tilt.jquery.min.js"></script>
