--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="dist/css/primer.css">
     <link rel="stylesheet" href="dist/css/common.css">
 
-    <script src="src/js/jquery-3.1.1.min.js"></script>
-    <script src="src/js/tilt.jquery.min.js"></script>
-    <script src="src/js/app.js"></script>
+    <script src="dist/js/jquery-3.1.1.min.js"></script>
+    <script src="dist/js/tilt.jquery.min.js"></script>
+    <script src="dist/js/app.js"></script>
 </head>
 <body>
 
@@ -85,7 +85,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/1.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/1.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target"
@@ -100,7 +100,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/2.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/2.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target"
@@ -114,7 +114,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/3.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/3.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target"
@@ -128,7 +128,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/4.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/4.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target" title="Команда мечты (2016)">Команда мечты (2016)</span>
@@ -141,7 +141,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/5.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/5.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target" title="Доктор Стрэндж (2016)">Доктор Стрэндж (2016)</span>
@@ -192,7 +192,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/6.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/6.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target" title="Моана (2016)">Моана (2016)</span>
@@ -206,7 +206,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/11.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/11.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target" title="В поисках Дори (2016)">В поисках Дори (2016)</span>
@@ -220,7 +220,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/9.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/9.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target"
@@ -235,7 +235,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/10.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/10.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target"
@@ -250,7 +250,7 @@
                         <!--movie-list__item start-->
                         <div class="movie-list__item">
                             <a href="#">
-                                <img src="src/img/8.jpg" class="img-responsive js-tilt" alt="">
+                                <img src="dist/img/8.jpg" class="img-responsive js-tilt" alt="">
                             </a>
                             <div class="movie-list__item-desc">
                                 <span class="branch-ref css-truncate css-truncate-target" title="Тролли (2016)">Тролли (2016)</span>
@@ -305,9 +305,9 @@
                                 <span class="series-list__item-title">MR. Robot</span>
                                 <span class="series-list__item-genres">Action, History, Fantasy</span>
 
-                                <img class="series-list__item-poster-left" src="src/img/1-left.jpg" alt="">
-                                <img class="series-list__item-poster-middle" src="src/img/1-middle.jpg" alt="">
-                                <img class="series-list__item-poster-right" src="src/img/1-right.jpg" alt="">
+                                <img class="series-list__item-poster-left" src="dist/img/1-left.jpg" alt="">
+                                <img class="series-list__item-poster-middle" src="dist/img/1-middle.jpg" alt="">
+                                <img class="series-list__item-poster-right" src="dist/img/1-right.jpg" alt="">
                             </a>
                         </div>
                         <!--series-list__item   end-->
@@ -320,9 +320,9 @@
                                 <span class="series-list__item-title">Game Of Thrones</span>
                                 <span class="series-list__item-genres">Action, History, Fantasy</span>
 
-                                <img class="series-list__item-poster-left" src="src/img/2-left.jpg" alt="">
-                                <img class="series-list__item-poster-middle" src="src/img/2-middle.jpg" alt="">
-                                <img class="series-list__item-poster-right" src="src/img/2-right.jpg" alt="">
+                                <img class="series-list__item-poster-left" src="dist/img/2-left.jpg" alt="">
+                                <img class="series-list__item-poster-middle" src="dist/img/2-middle.jpg" alt="">
+                                <img class="series-list__item-poster-right" src="dist/img/2-right.jpg" alt="">
                             </a>
                         </div>
                         <!--series-list__item   end-->
@@ -335,9 +335,9 @@
                                 <span class="series-list__item-title">Walking Dead</span>
                                 <span class="series-list__item-genres">Action, History, Fantasy</span>
 
-                                <img class="series-list__item-poster-left" src="src/img/3-left.jpg" alt="">
-                                <img class="series-list__item-poster-middle" src="src/img/3-middle.jpg" alt="">
-                                <img class="series-list__item-poster-right" src="src/img/3-right.jpg" alt="">
+                                <img class="series-list__item-poster-left" src="dist/img/3-left.jpg" alt="">
+                                <img class="series-list__item-poster-middle" src="dist/img/3-middle.jpg" alt="">
+                                <img class="series-list__item-poster-right" src="dist/img/3-right.jpg" alt="">
                             </a>
                         </div>
                         <!--series-list__item   end-->
@@ -383,7 +383,7 @@
                         <!--ted-list__item start-->
                         <div class="ted-list__ted-description">
                             <div class="blankslate blankslate-capped">
-                                <img src="src/img/TEDlogo.jpg" alt="">
+                                <img src="dist/img/TEDlogo.jpg" alt="">
                                 <span class="d-block">Ideas worth spreading</span>
                                 <span class="d-block mt-3">
                                     <a href="http://www.ted.com/" target="_blank"><small>Learn more about TED</small></a>
@@ -399,7 +399,7 @@
                                 <!--ted-list__item start-->
                                 <div class="ted-list__item">
                                     <a href="#">
-                                        <img src="src/img/ted-1.jpg" class="img-responsive" alt="">
+                                        <img src="dist/img/ted-1.jpg" class="img-responsive" alt="">
                                         <div class="ted-list__item-desc">
                                             <span>What time is it on Mars?</span>
                                         </div>
@@ -412,7 +412,7 @@
                                 <!--ted-list__item start-->
                                 <div class="ted-list__item">
                                     <a href="#">
-                                        <img src="src/img/ted-2.jpg" class="img-responsive" alt="">
+                                        <img src="dist/img/ted-2.jpg" class="img-responsive" alt="">
                                         <div class="ted-list__item-desc">
                                             <span>The good news of the decade? We're winning the war against child mortality</span>
                                         </div>
@@ -425,7 +425,7 @@
                                 <!--ted-list__item start-->
                                 <div class="ted-list__item">
                                     <a href="#">
-                                        <img src="src/img/ted-3.jpg" class="img-responsive" alt="">
+                                        <img src="dist/img/ted-3.jpg" class="img-responsive" alt="">
                                         <div class="ted-list__item-desc">
                                             <span>Playlist: Statistically speaking ... a man who loved the world</span>
                                         </div>
