SASS - added mixins & variables

--- a/app/view.html
+++ b/app/view.html
@@ -52,7 +52,7 @@
     <!--header   end-->
 
     <!--movie-view start-->
-    <div class="movie-view">
+    <section class="movie-view">
         <div class="container">
             <div class="columns">
                 <div class="single-column">
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--movie-view   end-->
 
     <!--moovie-list start-->
