--- a/app/view.html
+++ b/app/view.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Bumbu.tv - view movie</title>
     <link rel="stylesheet" href="dist/css/primer.css">
-    <link rel="stylesheet" href="dist/css/common.css">
+    <link rel="stylesheet" href="dist/css/app.min.css">
 
     <script src="dist/js/jquery-3.1.1.min.js"></script>
     <script src="dist/js/tilt.jquery.min.js"></script>
