--- a/app/view.html
+++ b/app/view.html
@@ -5,16 +5,12 @@
     <title>Bumbu.tv - view movie</title>
     <link rel="stylesheet" href="dist/css/primer.css">
     <link rel="stylesheet" href="dist/css/app.min.css">
-
-    <script src="dist/js/jquery-3.1.1.min.js"></script>
-    <script src="dist/js/tilt.jquery.min.js"></script>
-    <script src="dist/js/app.js"></script>
 </head>
 <body>
 
 <div id="wrapper">
     <!--header start-->
-    <header class="header border-bottom bg-gray">
+    <header class="header border-bottom">
         <div class="container">
             <div class="columns py-3">
                 <!--header__logo start-->
@@ -31,7 +27,7 @@
                             <!--header__search start-->
                             <div class="header_search">
                                 <form>
-                                    <input class="form-control input-block" type="text"
+                                    <input class="form-control input-block input-contrast" type="text"
                                            placeholder="Search">
                                 </form>
                             </div>
@@ -224,5 +220,9 @@
     <!--footer   end-->
 </div>
 
+<script src="dist/js/jquery-3.1.1.min.js"></script>
+<script src="dist/js/tilt.jquery.min.js"></script>
+<script src="dist/js/video.min.js"></script>
+<script src="dist/js/app.js"></script>
 </body>
 </html>
