VIDEO PLAYER - playing around the params

--- a/app/view.html
+++ b/app/view.html
@@ -100,9 +100,8 @@
             <div class="columns">
                 <div class="single-column">
 
-                    <video id="bumbu-player" class="video-js vjs-big-play-centered vjs-bumbu-skin"
-                           controls preload="auto" width="980" height="400"
-                           poster="">
+                    <video id="bumbu-player" class="video-js vjs-big-play-centered vjs-bumbu-skin" width="980"
+                           height="400">
                         <source src="src/video/ed/ed_hd.mp4" type="video/mp4"/>
                         <source src="src/video/ed/ed_hd.ogv" type="video/ogg"/>
                         <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a
