--- a/app/view.html
+++ b/app/view.html
@@ -245,7 +245,8 @@
 
 <script src="dist/js/jquery-3.1.1.min.js"></script>
 <script src="dist/js/tilt.jquery.min.js"></script>
-<script src="dist/js/video.min.js"></script>
+<!--<script src="dist/js/video.min.js"></script>-->
+<script src="dist/js/video.js"></script>
 <script src="dist/js/video-player.js"></script>
 <script src="dist/js/app.js"></script>
 </body>
