VIDEO PLAYER - track (caption) added

--- a/app/view.html
+++ b/app/view.html
@@ -104,6 +104,9 @@
                            height="400">
                         <source src="src/video/ed/ed_hd.mp4" type="video/mp4"/>
                         <source src="src/video/ed/ed_hd.ogv" type="video/ogg"/>
+
+                        <track kind="captions" src="src/video/ed/captions.en.vtt" srclang="en" label="English" default>
+
                         <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a
                             web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports
                                 HTML5 video</a></p>
