--- a/app/view.html
+++ b/app/view.html
@@ -250,7 +250,7 @@
 <script src="dist/js/tilt.jquery.min.js"></script>
 <!--<script src="dist/js/video.min.js"></script>-->
 <script src="dist/js/video.js"></script>
-<script src="dist/js/video-player-plugins/videojs.hotkeys.min.js"></script>
+<script src="dist/js/video-player-plugins/videojs.hotkey.js"></script>
 <script src="dist/js/video-player.js"></script>
 <script src="dist/js/app.js"></script>
 </body>
