VIDEO PLAYER - subtitle's prettified Added player play/pause on cue hover Added tracking whether player is paused by user or not

--- a/app/view.html
+++ b/app/view.html
@@ -106,7 +106,7 @@
                         <source src="src/video/ed/ed_hd.mp4" type="video/mp4"/>
                         <source src="src/video/ed/ed_hd.ogv" type="video/ogg"/>
 
-                        <track kind="subtitles" src="src/video/ed/captions.en.vtt" srclang="en" label="English" default>
+                        <!--<track kind="subtitles" src="src/video/ed/captions.en.vtt" srclang="en" label="English" default>-->
 
                         <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a
                             web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports
@@ -248,7 +248,7 @@
 </div>
 
 <script src="dist/js/jquery-3.1.1.min.js"></script>
-<script src="dist/js/tilt.jquery.min.js"></script>
+<!--<script src="dist/js/tilt.jquery.min.js"></script>-->
 <!--<script src="dist/js/video.min.js"></script>-->
 <script src="dist/js/video.js"></script>
 <script src="dist/js/video-player-plugins/videojs.hotkey.js"></script>
