LAYOUT - added 'font awesome' Created 'dark theme' for head (like on Github)

--- a/app/view.html
+++ b/app/view.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bumbu.tv - view movie</title>
+    <link rel="stylesheet" href="dist/css/font-awesome.min.css">
     <link rel="stylesheet" href="dist/css/primer.css">
     <link rel="stylesheet" href="dist/css/app.min.css">
     <link rel="stylesheet" href="dist/css/video-js.css">
@@ -13,7 +14,7 @@
 
 <div id="wrapper">
     <!--header start-->
-    <header class="header border-bottom">
+    <header class="header header_theme_dark border-bottom">
         <div class="container">
             <div class="columns py-3">
                 <!--header__logo start-->
@@ -30,6 +31,7 @@
                             <!--header__search start-->
                             <div class="header_search">
                                 <form>
+                                    <i class="fa fa-search" aria-hidden="true"></i>
                                     <input class="form-control input-block input-contrast" type="text"
                                            placeholder="Search">
                                 </form>
@@ -248,7 +250,7 @@
 </div>
 
 <script src="dist/js/jquery-3.1.1.min.js"></script>
-<!--<script src="dist/js/tilt.jquery.min.js"></script>-->
+<script src="dist/js/tilt.jquery.min.js"></script>
 <!--<script src="dist/js/video.min.js"></script>-->
 <script src="dist/js/video.js"></script>
 <script src="dist/js/video-player-plugins/videojs.hotkey.js"></script>
