--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bumbu.tv - main page</title>
+    <link rel="stylesheet" href="dist/css/font-awesome.min.css">
     <link rel="stylesheet" href="dist/css/primer.css">
     <link rel="stylesheet" href="dist/css/app.min.css">
 </head>
@@ -10,7 +11,7 @@
 
 <div id="wrapper">
     <!--header start-->
-    <header class="header border-bottom">
+    <header class="header header_theme_dark border-bottom">
         <div class="container">
             <div class="columns py-3">
                 <!--header__logo start-->
@@ -27,7 +28,8 @@
                             <!--header__search start-->
                             <div class="header_search">
                                 <form>
-                                    <input class="form-control input-block input-contrast" type="text"
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                    <input class="form-control input-block" type="text"
                                            placeholder="Search">
                                 </form>
                             </div>
@@ -62,8 +64,8 @@
                             <div class="right">
                                 <a href="#" class="btn btn-outline">All</a>
                                 <div class="btn-group">
-                                    <button class="btn" type="button">&larr;</button>
-                                    <button class="btn" type="button">&rarr;</button>
+                                    <button class="btn" type="button"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+                                    <button class="btn" type="button"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
                                 </div>
                             </div>
                         </header>
@@ -169,8 +171,8 @@
                             <div class="right">
                                 <a href="#" class="btn btn-outline">All</a>
                                 <div class="btn-group">
-                                    <button class="btn" type="button">&larr;</button>
-                                    <button class="btn" type="button">&rarr;</button>
+                                    <button class="btn" type="button"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+                                    <button class="btn" type="button"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
                                 </div>
                             </div>
                         </header>
@@ -278,8 +280,8 @@
                             <div class="right">
                                 <a href="#" class="btn btn-outline">All</a>
                                 <div class="btn-group">
-                                    <button class="btn" type="button">&larr;</button>
-                                    <button class="btn" type="button">&rarr;</button>
+                                    <button class="btn" type="button"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+                                    <button class="btn" type="button"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
                                 </div>
                             </div>
                         </header>
@@ -360,8 +362,8 @@
                             <div class="right">
                                 <a href="#" class="btn btn-outline">All</a>
                                 <div class="btn-group">
-                                    <button class="btn" type="button">&larr;</button>
-                                    <button class="btn" type="button">&rarr;</button>
+                                    <button class="btn" type="button"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+                                    <button class="btn" type="button"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
                                 </div>
                             </div>
                         </header>
